[metadata]
name = psptrace
version = 0.4
author = Christian Werling
author_email = cwerling@posteo.de
url = https://github.com/PSPReverse/PSPTrace
description = PSPTrace can correlate an SPI capture of an AMD boot procedure to the PSP firmware components

classifiers= Development Status :: 4 - Beta
             Intended Audience :: Science/Research
             Topic :: Security
             License :: OSI Approved :: GNU General Public License v3 (GPLv3)
             Programming Language :: Python :: 3.8

[options]
packages = psptrace
python_requires = >=3.8
install_requires = psptool>=2.4
                   prettytable

[options.entry_points]
console_scripts = psptrace = psptrace.psptrace:main
